[package]
name = "xpub-balance"
version = "0.1.0"
authors = ["kaiwitt <kaiwitt@protonmail.com>"]
edition = "2018"
description = "Checks the balance of an xpub and its addresses"
readme = "README.md"
homepage = "https://github.com/KaiWitt/xpub-balance/"
repository = "https://github.com/KaiWitt/xpub-balance/"
license = "MIT"
keywords = ["bitcoin", "cli", "watch-only", "xpub"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bdk = "0.6.0"
clap = "2.33.3"
electrum2descriptors = "0.4.0"
esplora-api = { version = "0.1.0", features = ["blocking"] }
indicatif = "0.16.0"
num-format = "0.4.0"
rayon = "1.5.0"
